<resources>
    <string name="app_name">NewsFlow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="main_title">NEWSFLOW</string>
    <string name="search">Search</string>
    <string name="notifications">Notifications</string>
    <string name="read_full_article">Read Full Article</string>
    <string name="no_recent_notifications">No recent notifications</string>
    <string name="we_couldn_t_find_that">We couldn\'t find that</string>
    <string name="try_searching_with_different_keywords">Try searching with different keywords</string>
    <string name="no_saved_news_found">No saved news found</string>
    <string name="select_regions">Select Regions</string>
    <string name="global">Global</string>
    <string name="north_america">North America</string>
    <string name="europe">Europe</string>
    <string name="asia_pacific">Asia Pacific</string>
    <string name="middle_east">Middle East</string>
    <string name="africa">Africa</string>
    <string name="interests">Interests</string>
    <string name="technology">Technology</string>
    <string name="business">Business</string>
    <string name="sports">Sports</string>
    <string name="lifestyle">Lifestyle</string>
    <string name="entertainment">Entertainment</string>
    <string name="preferences">Preferences</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="info_and_legal"><![CDATA[Info & Legal]]></string>
    <string name="about_us">About Us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="app_version">Version 1.0.0</string>
    <string name="all">All</string>
    <string name="no_news_found_for_this_region">No news found for this region!</string>
    <string name="trending">TRENDING</string>
    <string name="loading_top_stories">Loading top stories...</string>
    <string name="more_trending">More Trending</string>
    <string name="no_trending_stories_for_this_region">No trending stories for this region!</string>
</resources>